# YOLOs-CPP

./: .gitignore  CMakeLists.txt  config.json  rtsp.bat  settings.json  structure.txt
include/: YOLO10.hpp  YOLO8.hpp
include/tools/: FFmpegPipe.hpp  StatsDisplay.hpp
src/: camera_inference_v8.cpp
